// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar Component should handle updating state and dispatching a sla filter: sla clear filters 1`] = `
Object {
  "activeFilters": Set {},
  "filterCategory": null,
}
`;

exports[`Toolbar Component should handle updating state and dispatching a sla filter: sla selected 1`] = `
Object {
  "activeFilters": Set {
    "sla",
  },
  "filterCategory": "sla",
}
`;

exports[`Toolbar Component should handle updating state and dispatching a usage filter: usage clear filters 1`] = `
Object {
  "activeFilters": Set {},
  "filterCategory": null,
}
`;

exports[`Toolbar Component should handle updating state and dispatching a usage filter: usage selected 1`] = `
Object {
  "activeFilters": Set {
    "usage",
  },
  "filterCategory": "usage",
}
`;

exports[`Toolbar Component should render a non-connected component: non-connected 1`] = `
<Toolbar
  className="curiosity-toolbar pf-m-toggle-group-container ins-c-primary-toolbar"
  clearAllFilters={[Function]}
  collapseListedFiltersBreakpoint="sm"
  id="curiosity-toolbar"
>
  <ToolbarContent
    isExpanded={false}
    showClearFiltersButton={false}
  >
    <ToolbarToggleGroup
      breakpoint="md"
      toggleIcon={
        <FilterIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      }
    >
      <ForwardRef
        variant="filter-group"
      >
        <ToolbarItem>
          <Select
            aria-label="t(curiosity-toolbar.category)"
            ariaLabel="Select option"
            className=""
            id="generatedid-"
            isDisabled={false}
            isToggleText={true}
            name={null}
            onSelect={[Function]}
            options={
              Array [
                Object {
                  "title": "t(curiosity-toolbar.slaCategory)",
                  "value": "sla",
                },
                Object {
                  "title": "t(curiosity-toolbar.usageCategory)",
                  "value": "usage",
                },
              ]
            }
            placeholder="t(curiosity-toolbar.categoryPlaceholder)"
            selectedOptions={Array []}
            toggleIcon={
              <FilterIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              />
            }
            variant="single"
          />
        </ToolbarItem>
        <ToolbarFilter
          categoryName="t(curiosity-toolbar.slaCategory)"
          chips={Array []}
          deleteChip={[Function]}
          showToolbarItem={false}
        >
          <Select
            aria-label="t(curiosity-toolbar.slaCategory)"
            ariaLabel="Select option"
            className=""
            id="generatedid-"
            isDisabled={false}
            isToggleText={true}
            name={null}
            onSelect={[Function]}
            options={
              Array [
                Object {
                  "title": "t(curiosity-toolbar.slaPremium)",
                  "value": "premium",
                },
                Object {
                  "title": "t(curiosity-toolbar.slaStandard)",
                  "value": "standard",
                },
                Object {
                  "title": "t(curiosity-toolbar.slaSelfSupport)",
                  "value": "self-support",
                },
                Object {
                  "title": "t(curiosity-toolbar.slaNone)",
                  "value": "",
                },
              ]
            }
            placeholder="t(curiosity-toolbar.slaPlaceholder)"
            selectedOptions={Array []}
            toggleIcon={null}
            variant="single"
          />
        </ToolbarFilter>
        <ToolbarFilter
          categoryName="t(curiosity-toolbar.usageCategory)"
          chips={Array []}
          deleteChip={[Function]}
          showToolbarItem={false}
        >
          <Select
            aria-label="t(curiosity-toolbar.usageCategory)"
            ariaLabel="Select option"
            className=""
            id="generatedid-"
            isDisabled={false}
            isToggleText={true}
            name={null}
            onSelect={[Function]}
            options={
              Array [
                Object {
                  "title": "t(curiosity-toolbar.usageDevelopment)",
                  "value": "Development/Test",
                },
                Object {
                  "title": "t(curiosity-toolbar.usageDisaster)",
                  "value": "Disaster Recovery",
                },
                Object {
                  "title": "t(curiosity-toolbar.usageProduction)",
                  "value": "Production",
                },
                Object {
                  "title": "t(curiosity-toolbar.usageUnspecified)",
                  "value": "",
                },
              ]
            }
            placeholder="t(curiosity-toolbar.usagePlaceholder)"
            selectedOptions={Array []}
            toggleIcon={null}
            variant="single"
          />
        </ToolbarFilter>
      </ForwardRef>
    </ToolbarToggleGroup>
  </ToolbarContent>
</Toolbar>
`;

exports[`Toolbar Component should return an empty render when disabled: disabled component 1`] = `""`;
